# Intel_Briefing

./: .dockerignore  .env.example  .gitignore  AIA_Agent_Handoff_2026.md  Dockerfile  README.md  README_EN.md  cli.py  docker-compose.yml  fetch_unified_intel.py  pyproject.toml  run_mission.py
.github/workflows/: daily-report.yml
data/: rss_sensor.py
docs/: GROK_HORIZON_EXPANDER_集成计划.md
prompts/: annual_report.md  commander_state.example.md  commercial_logic_pro.md  monthly_report.md  tot_mission_planner.md  weekly_report.md
reports/daily_briefings/: Morning_Report_2026-06-17.md  Morning_Report_2026-06-18.md  Morning_Report_2026-06-19.md  Morning_Report_2026-06-20.md  Morning_Report_2026-06-21.md  Morning_Report_2026-06-22.md  Morning_Report_2026-06-23.md  Morning_Report_2026-06-24.md  Morning_Report_2026-06-25.md  Morning_Report_2026-06-26.md  Morning_Report_2026-06-27.md  Morning_Report_2026-06-28.md  Morning_Report_2026-06-29.md  Morning_Report_2026-06-30.md  Morning_Report_2026-07-01.md  Morning_Report_2026-07-02.md  Morning_Report_2026-07-03.md  Morning_Report_2026-07-04.md  Morning_Report_2026-07-05.md  Morning_Report_2026-07-06.md  Morning_Report_2026-07-07.md  Morning_Report_2026-07-08.md  Morning_Report_2026-07-09.md  Morning_Report_2026-07-10.md  Morning_Report_2026-07-11.md  Morning_Report_2026-07-12.md  (+12 more)
scripts/: condense_month.py  horizon_report.py  recurrence_scan.py
src/: config.py  intel_collector.py  report_generator.py  schemas.py
tests/: test_anti_hallucination.py  test_core.py  test_graceful_degradation.py  test_import_smoke.py
(+15 files in other folders)
