[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intel-briefing"
version = "2.1.0"
description = "Unified Intelligence Engine - Daily AI/Tech briefing generator"
requires-python = ">=3.11"
dependencies = [
    "httpx[socks]>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "feedparser>=6.0,<7.0",
    "google-genai>=1.0,<2.0",
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<6.0",
]

[project.scripts]
intel-briefing = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools]
py-modules = ["cli"]

[tool.pytest.ini_options]
pythonpath = ["."]
